z-index issue with the dragged tree portion
git-svn-id: http://svn.apostrophenow.org/plugins/apostrophePlugin/branches/1.5@3662 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/js/jsTree/source/themes/punk/style.css
+++ b/web/js/jsTree/source/themes/punk/style.css
@@ -31,6 +31,7 @@ cursor: pointer;
 {
 	padding: 0px !important;
 }
+#jstree-dragged { z-index: 9999; }
 
 .tree-punk li.open { background-image:url("minus.gif"); background-position:2px 5px; }
 .tree-punk li.closed, #jstree-dragged.tree-punk li li.open { background-image:url("plus.gif"); background-position:2px 5px; }
